--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tutoring Payment Tracker</title>
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
     />
+    <link
+      rel="shortcut icon"
+      href="{{ url_for('static', filename='favicon.ico') }}"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <style>
@@ -21,8 +32,19 @@
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Tutoring Payment Tracker</a>
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="\">
+          <img
+            src="/static/img.png"
+            alt=""
+            width="30"
+            height="25"
+            class="d-inline-block align-text-top"
+          />
+          Tutoring Payment Tracker
+        </a>
+      </div>
     </nav>
 
     <div class="container text-center mt-5">
@@ -35,8 +57,6 @@
       <br />
       <br />
       <br />
-      <br />
-      <br />
 
       <form
         id="uploadForm"
@@ -45,14 +65,16 @@
         enctype="multipart/form-data"
       >
         <div class="form-group">
+          <label for="fileInput" class="form-label"></label>
           <input
-            type="file"
-            name="file"
-            class="form-control-file"
+            class="form-control form-control-lg"
             id="fileInput"
+            name="file"
+            type="file"
             multiple
           />
         </div>
+        <br />
         <div class="form-group">
           <select class="form-control" name="view" id="viewSelect">
             <option value="">Select View</option>
@@ -60,6 +82,7 @@
             <option value="unpaid">Unpaid Students</option>
           </select>
         </div>
+        <br />
         <div class="form-group" id="monthSelectGroup" style="display: none">
           <select class="form-control" name="month" id="monthSelect">
             <option value="">Select Month</option>
@@ -77,6 +100,7 @@
             <option value="12">December</option>
           </select>
         </div>
+        <br />
         <button
           type="submit"
           class="btn btn-primary"
@@ -89,12 +113,15 @@
       <br />
       <br />
       <br />
-      <div
-        class="spinner-border text-primary mt-3"
-        role="status"
-        id="loadingSpinner"
-      >
-        <span class="sr-only">Loading...</span>
+      <div class="d-flex justify-content-center">
+        <div
+          class="spinner-border text-danger"
+          style="width: 5rem; height: 5rem"
+          role="status"
+          id="loadingSpinner"
+        >
+          <span class="visually-hidden">Loading...</span>
+        </div>
       </div>
     </div>
 
