--- a/templates/unpaid_students.html
+++ b/templates/unpaid_students.html
@@ -5,9 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Unpaid Students</title>
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
     />
+    <link
+      rel="shortcut icon"
+      href="{{ url_for('static', filename='favicon.ico') }}"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <style>
@@ -18,32 +29,60 @@
         display: none;
         margin: 0 auto;
       }
+      .modal-content {
+        border-radius: 10px;
+      }
     </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="/">Tutoring Payment Tracker</a>
+    <nav class="navbar navbar-dark bg-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="\">
+          <img
+            src="/static/img.png"
+            alt=""
+            width="30"
+            height="25"
+            class="d-inline-block align-text-top"
+          />
+          Tutoring Payment Tracker
+        </a>
+      </div>
     </nav>
 
     <div class="container">
-      <h2>Unpaid Students for {{ month }}</h2>
-      <div
-        class="spinner-border text-primary"
-        role="status"
-        id="loadingSpinner"
-      >
-        <span class="sr-only">Loading...</span>
+      <h2 class="mb-4">Unpaid Students for {{ month }}</h2>
+      <div class="d-flex justify-content-center">
+        <div
+          class="spinner-border text-danger"
+          style="width: 5rem; height: 5rem"
+          role="status"
+          id="loadingSpinner"
+        >
+          <span class="visually-hidden">Loading...</span>
+        </div>
       </div>
       {% if unpaid_students %}
-      <ul class="list-group mt-3">
-        {% for student in unpaid_students %}
-        <li class="list-group-item">{{ student }}</li>
-        {% endfor %}
-      </ul>
+      <div class="table-responsive mt-3">
+        <table class="table table-danger table-bordered table-striped">
+          <thead class="table-dark">
+            <tr>
+              <th scope="col">Student Name</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for student in unpaid_students %}
+            <tr>
+              <td>{{ student }}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
       <button
         class="btn btn-primary mt-3"
-        data-toggle="modal"
-        data-target="#emailModal"
+        data-bs-toggle="modal"
+        data-bs-target="#emailModal"
       >
         Email List
       </button>
@@ -68,12 +107,10 @@
             <h5 class="modal-title" id="emailModalLabel">Send Email</h5>
             <button
               type="button"
-              class="close"
-              data-dismiss="modal"
+              class="btn-close"
+              data-bs-dismiss="modal"
               aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
+            ></button>
           </div>
           <div class="modal-body">
             <form id="emailForm" action="/send_email" method="post">
@@ -85,8 +122,8 @@
                 value="{{ student }}"
               />
               {% endfor %}
-              <div class="form-group">
-                <label for="email">Recipient Email</label>
+              <div class="mb-3">
+                <label for="email" class="form-label">Recipient Email</label>
                 <input
                   type="email"
                   class="form-control"
@@ -130,7 +167,6 @@
             url: form.action,
             data: $(form).serialize(),
             success: function (response) {
-              console.log(response); // Debugging information
               Swal.fire({
                 icon: response.status,
                 title: response.status === 'success' ? 'Email Sent' : 'Notice',
@@ -142,7 +178,6 @@
               });
             },
             error: function (response) {
-              console.error(response); // Debugging information
               var message = response.responseJSON
                 ? response.responseJSON.message
                 : 'Failed to send email. Please try again later.';
@@ -159,6 +194,5 @@
           });
         });
     </script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </body>
 </html>
